# ai-engineering-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/agentsys/: app_context.py
src/agentsys/agents/: base.py  dev.py  fixer.py  pm.py  reviewer.py
src/agentsys/api/: app.py  routes.py  schemas.py
src/agentsys/clients/: chroma.py  github.py  object_storage.py  postgres.py  redis.py
src/agentsys/config/: settings.py
src/agentsys/graph/: builder.py  checkpointer.py  nodes.py  runner.py  state.py
src/agentsys/llm/: factory.py
src/agentsys/observability/: langfuse.py  logging.py
src/agentsys/scheduler/: board_scan.py
src/agentsys/toolkits/: base.py  board.py  codebase.py  git.py  messaging.py  pr.py  shell.py
tests/: conftest.py  test_smoke.py
